Add a book message for deep swamps, warning of their very lethal nature. Requires commit 4d4d28ff in the server to actually show in-game. The message length is 1532, which is slightly too long for the unadjusted book length to allow for its generation. Though, since this seems to be a recurring trouble, instead of adjusting the wording, the cap was adjusted.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Add book message for warning about deep swamps.
+messages
+Neila Hawkins 2024-11-04
+
 Add summary comments to clarify how no_magic, no_spells, and unholy_ground
 floor tiles function.
 floor/no_magic.arc
