Add images for all skills
This allows clients to use skill faces.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,77 @@
+Add images for all skills.
+skills/skill_alchemy.base.111.png
+skills/skill_bargaining.base.111.png
+skills/skill_bowyer.base.111.png
+skills/skill_clawing.base.111.png
+skills/skill_climbing.base.111.png
+skills/skill_disarm_traps.base.111.png
+skills/skill_find_traps.base.111.png
+skills/skill_fishing.base.111.png
+skills/skill_flame_touch.base.111.png
+skills/skill_hiding.base.111.png
+skills/skill_inscription.base.111.png
+skills/skill_jeweler.base.111.png
+skills/skill_jumping.base.111.png
+skills/skill_karate.base.111.png
+skills/skill_levitation.base.111.png
+skills/skill_literacy.base.111.png
+skills/skill_lockpicking.base.111.png
+skills/skill_meditation.base.111.png
+skills/skill_mining.base.111.png
+skills/skill_missile_weap.base.111.png
+skills/skill_one_handed_weapons.base.111.png
+skills/skill_oratory.base.111.png
+skills/skill_punching.base.111.png
+skills/skill_sense_curse.base.111.png
+skills/skill_sense_magic.base.111.png
+skills/skill_singing.base.111.png
+skills/skill_smithing.base.111.png
+skills/skill_stealing.base.111.png
+skills/skill_thaumaturgy.base.111.png
+skills/skill_throwing.base.111.png
+skills/skill_two_handed_weapons.base.111.png
+skills/skill_use_magic_item.base.111.png
+skills/skill_woodsman.base.111.png
+skills/skill_wraith_feed.base.111.png
+skills/alchemist.arc
+skills/bargaining.arc
+skills/bowyer.arc
+skills/clawing.arc
+skills/climbing.arc
+skills/disarm_traps.arc
+skills/find_traps.arc
+skills/fishing.arc
+skills/flame_touch.arc
+skills/hide.arc
+skills/inscription.arc
+skills/jeweler.arc
+skills/jumping.arc
+skills/karate.arc
+skills/levitation.arc
+skills/literacy.arc
+skills/lockpicking.arc
+skills/meditation.arc
+skills/mining.arc
+skills/missile_weap.arc
+skills/one_handed_weapons.arc
+skills/oratory.arc
+skills/praying.arc
+skills/punching.arc
+skills/sense_curse.arc
+skills/sense_magic.arc
+skills/set_trap.arc
+skills/singing.arc
+skills/smithery.arc
+skills/stealing.arc
+skills/summoning.arc
+skills/thaumaturgy.arc
+skills/throwing.arc
+skills/two_handed_weapons.arc
+skills/use_magic_item.arc
+skills/woodsman.arc
+skills/wraith_feed.arc
+Ketchetwahmeegwun T. Southall 2025-02-16
+
 Add book message for warning about deep swamps.
 messages
 Neila Hawkins 2024-11-04
